--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="com.example.pawan.todoapp.MainActivity">
 
+      <TextView
+          android:id="@+id/notodo"
+          android:gravity="center"
+          android:textColor="@android:color/black"
+          android:background="@android:color/darker_gray"
+          android:text="No ToDo Available"
+          android:textSize="20dp"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
    <ListView
        android:id="@+id/list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
-
    </ListView>
+
 </LinearLayout>
