--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -12,14 +12,8 @@
     <TextView
         android:id="@+id/todo"
         android:text="Todo"
-        android:textSize="20dp"
-        android:textColor="@android:color/background_dark"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/details"
-        android:text="details"
-        android:textSize="15dp"
+        android:textSize="40dp"
+        android:textColor="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
@@ -27,6 +21,7 @@
     <Button
         android:id="@+id/delete"
         android:text="Delete"
+        android:focusable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
